@@ -4,7 +4,6 @@ import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MemoryAppender extends ListAppender<ILoggingEvent> {
   public void reset() {
@@ -22,15 +21,13 @@ public class MemoryAppender extends ListAppender<ILoggingEvent> {
   }
 
   public List<ILoggingEvent> search(String string) {
-    return this.list.stream()
-        .filter(event -> event.toString().contains(string))
-        .collect(Collectors.toList());
+    return this.list.stream().filter(event -> event.toString().contains(string)).toList();
   }
 
   public List<ILoggingEvent> search(String string, Level level) {
     return this.list.stream()
         .filter(event -> event.toString().contains(string) && event.getLevel().equals(level))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public int getSize() {
